# url_shortener

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: bump-version.yml  deploy.yml
nginx/: nginx.conf
scripts/: backup.sh
src/apps/: url_router.py
src/apps/account/: managers.py  models.py
src/apps/account/admin/: admins.py
src/apps/account/api/: serializers.py  urls.py  views.py
src/apps/account/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_phone_alter_user_username.py  0004_alter_user_username_user_unique_email_constraint_and_more.py
src/apps/analytics/: models.py
src/apps/analytics/api/: filters.py  serializers.py  urls.py  views.py
src/apps/analytics/migrations/: 0001_initial.py  0002_alter_urlclick_url.py  0003_rename_url_urlclick_short_url.py
src/apps/shortener/: models.py
src/apps/shortener/api/: defaults.py  serializers.py  urls.py  views.py
src/apps/shortener/migrations/: 0001_initial.py  0002_url_name.py  0003_alter_url_name_shorturl.py  0004_alter_shorturl_options.py  0005_alter_shorturl_is_active_alter_shorturl_short_url_and_more.py  0006_url_user.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  development.py  production.py  testing.py
src/core/: managers.py  models.py
src/core/api/: exceptions.py  views.py
src/scripts/: entrypoint.sh
utils/: bump_version.py
